Modificación del footer

--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
     
     <script src="/scrip.js"></script>
 </body>
-<footer>Gloriana Sojo - 2024</footer>
+<footer>Gloriana Sojo Pereira - 2024</footer>
 </html>
